--- a/public_html/coming_soon.html
+++ b/public_html/coming_soon.html
@@ -3,7 +3,7 @@
     <head>
         <title>Jason Tu</title>
         <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
-        <link rel="stylesheet" href="css/coming_soon.css">
+        <link rel="stylesheet" href="css/main.css">
         <link rel="icon" href="favicon.ico">
     </head>
 
