cleaned up some stuff

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -7,13 +7,15 @@
         <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <link rel="icon" href="favicon.ico">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="js/main.js"></script>
     </head>
 
     <body>
         <div class="main-div">
-            <div class="title-text">
+            <h1>
                 Jason Tu
-            </div>
+            </h1>
             <p>
                 Computer science graduate of Rochester Institute of Technology.
             </p>
@@ -24,7 +26,7 @@
                 <br>
                 <a href="https://github.com/jwt8264" target="_blank">Github ➛</a>
                 <br>
-                <div style="display:none;">
+                <div hidden>
                     <a href="experiments.html" >Web Experiments ➛</a>
                     <br>
                 </div>
