added new sections and redid a bit of css

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -23,26 +23,36 @@
             <br>
             <div>
                 <!-- icons from https://www.iconsdb.com -->
-                <div class="link-container">
-                <a href="files/JasonTuResume.pdf" target="_blank">
-                    <img class="my-icons" src="img/resume.png">
-                    Resume ➛
-                </a>
+                <div hidden class="link-container">
+                    <a href="about.html">
+                        <img class="my-icons" src="img/about.png">
+                        About ➛
+                    </a>
+
                 </div>
                 <div class="link-container">
-                <a href="https://www.linkedin.com/in/jwt8264/" target="_blank">
-                    <img class="my-icons" src="img/linkedin.png">
-                    LinkedIn ➛
-                </a>
+                    <a href="files/JasonTuResume.pdf" target="_blank">
+                        <img class="my-icons" src="img/resume.png">
+                        Resume ➛
+                    </a>
                 </div>
                 <div class="link-container">
-                <a href="https://github.com/jwt8264" target="_blank">
-                    <img class="my-icons" src="img/github.png">
-                    Github ➛
-                </a>
+                    <a href="https://www.linkedin.com/in/jwt8264/" target="_blank">
+                        <img class="my-icons" src="img/linkedin.png">
+                        LinkedIn ➛
+                    </a>
+                </div>
+                <div class="link-container">
+                    <a href="https://github.com/jwt8264" target="_blank">
+                        <img class="my-icons" src="img/github.png">
+                        Github ➛
+                    </a>
                 </div>
                 <div hidden class="link-container">
-                    <a href="experiments.html" >Web Experiments ➛</a>
+                    <a href="experiments.html" >
+                        <img class="my-icons" src="img/globe.png">
+                        Web Experiments ➛
+                    </a>
                     <br>
                 </div>
 
