updated to new css

--- a/public_html/coming_soon.html
+++ b/public_html/coming_soon.html
@@ -8,10 +8,10 @@
     </head>
 
     <body>
-        <div class="centered" style="margin-top:100px;">
-            <p class="title-text">
+        <div class="main-div">
+            <h1>
                 Coming Soon
-            </p>
+            </h1>
             <p>
                 This website is under construction.
             </p>
