--- a/public_html/home.html
+++ b/public_html/home.html
@@ -25,49 +25,48 @@
                 <!-- icons from https://www.iconsdb.com -->
                 <div hidden class="link-container">
                     <a href="about.html">
-                        <img class="my-icons" src="img/about.png">
+                        <img src="img/about.png" class="my-icons" >
                         About ➛
                     </a>
 
                 </div>
                 <div class="link-container">
                     <a href="files/JasonTuResume.pdf" target="_blank">
-                        <img class="my-icons" src="img/resume.png">
+                        <img src="img/resume.png" class="my-icons">
                         Resume ➛
                     </a>
                 </div>
                 <div class="link-container">
                     <a href="https://www.linkedin.com/in/jwt8264/" target="_blank">
-                        <img class="my-icons" src="img/linkedin.png">
+                        <img src="img/linkedin.png" class="my-icons">
                         LinkedIn ➛
                     </a>
                 </div>
                 <div class="link-container">
                     <a href="https://github.com/jwt8264" target="_blank">
-                        <img class="my-icons" src="img/github.png">
+                        <img src="img/github.png" class="my-icons">
                         Github ➛
                     </a>
                 </div>
                 <div hidden class="link-container">
                     <a href="experiments.html" >
-                        <img class="my-icons" src="img/globe.png">
+                        <img src="img/globe.png" class="my-icons">
                         Web Experiments ➛
                     </a>
                     <br>
                 </div>
-
                 <br>
                 <div class="link-container">
-                <!-- display email with js to defeat web crawlers -->
-                <noscript>
-                    Email: Please enable JavaScript to display email
-                </noscript>
-                <img class="my-icons" src="img/mail.png">
-                <script type="text/javascript">
-                    var user = 'jwt8264',
-                        domain = 'gmail.com';
-                    document.write(user + '@' + domain);
-                </script>
+                    <!-- display email with js to defeat web crawlers -->
+                    <noscript>
+                        Email: Please enable JavaScript to display email
+                    </noscript>
+                    <img src="img/mail.png" class="my-icons">
+                    <script type="text/javascript">
+                        var user = 'jwt8264',
+                            domain = 'gmail.com';
+                        document.write(user + '@' + domain);
+                    </script>
                 </div>
             </div>
         </div>
