updated some css

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
     <head>
@@ -7,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
         <link rel="icon" href="favicon.ico">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js/main.js"></script>
@@ -14,44 +16,46 @@
 
     <body>
         <div class="main-div">
-            <h1>
+            <p>
                 Jason Tu
-            </h1>
+            </p>
             <p>
                 Computer science graduate of Rochester Institute of Technology.
             </p>
             <br>
             <div>
                 <!-- icons from https://www.iconsdb.com -->
+                <!-- arrow reference for quick copy paste: ◅ ▻ -->
                 <div hidden class="link-container">
                     <a href="about.html">
                         <img src="img/about.png" class="my-icons" >
-                        About ➛
+                        About ▻
+                        <!-- <i class="fas angle-right"></i> -->
                     </a>
 
                 </div>
                 <div class="link-container">
                     <a href="files/JasonTuResume.pdf" target="_blank">
                         <img src="img/resume.png" class="my-icons">
-                        Resume ➛
+                        Resume ▻
                     </a>
                 </div>
                 <div class="link-container">
                     <a href="https://www.linkedin.com/in/jwt8264/" target="_blank">
                         <img src="img/linkedin.png" class="my-icons">
-                        LinkedIn ➛
+                        LinkedIn ▻
                     </a>
                 </div>
                 <div class="link-container">
                     <a href="https://github.com/jwt8264" target="_blank">
                         <img src="img/github.png" class="my-icons">
-                        Github ➛
+                        Github ▻
                     </a>
                 </div>
                 <div hidden class="link-container">
                     <a href="experiments.html" >
                         <img src="img/globe.png" class="my-icons">
-                        Web Experiments ➛
+                        Web Experiments ▻
                     </a>
                     <br>
                 </div>
