added experiments page

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -16,9 +16,9 @@
 
     <body>
         <div class="main-div">
-            <p>
+            <h1>
                 Jason Tu
-            </p>
+            </h1>
             <p>
                 Computer science graduate of Rochester Institute of Technology.
             </p>
@@ -52,7 +52,7 @@
                         Github ▻
                     </a>
                 </div>
-                <div hidden class="link-container">
+                <div class="link-container">
                     <a href="experiments.html" >
                         <img src="img/globe.png" class="my-icons">
                         Web Experiments ▻
