changed new experiment to coming soon page

--- a/public_html/experiments.html
+++ b/public_html/experiments.html
@@ -25,7 +25,8 @@
                 This is where I keep my web development experiments.
             </p>
             <br>
-            <a href="exp/recipe/home.html">
+            <!-- <a href="exp/recipe/home.html"> -->
+            <a href="exp/coming_soon.html">
                 Recipe Finder ▻
             </a>
             <p>
