changed file structure

--- a/public_html/coming_soon_exp.html
+++ b/public_html/coming_soon_exp.html
@@ -3,13 +3,13 @@
     <head>
         <title>Jason Tu</title>
         <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="css/main.css">
         <link rel="icon" href="favicon.ico">
     </head>
 
     <body>
         <div class="main-div">
-            <a href="../experiments.html">
+            <a href="experiments.html">
                 ◅ Web Experiments
             </a>
             <h1>
