--- a/public_html/experiments.html
+++ b/public_html/experiments.html
@@ -26,7 +26,7 @@
             </p>
             <br>
             <!-- <a href="exp/recipe/home.html"> -->
-            <a href="exp/coming_soon.html">
+            <a href="coming_soon_exp.html">
                 Recipe Finder ▻
             </a>
             <p>
