--- a/public_html/home.html
+++ b/public_html/home.html
@@ -26,7 +26,7 @@
             <div>
                 <!-- icons from https://www.iconsdb.com -->
                 <!-- arrow reference for quick copy paste: ◅ ▻ -->
-                <div hidden class="link-container">
+                <div class="link-container">
                     <a href="about.html">
                         <img src="img/about.png" class="my-icons" >
                         About ▻
