--- a/public_html/coming_soon_exp.html
+++ b/public_html/coming_soon_exp.html
@@ -1,6 +1,7 @@
 <html>
 
     <head>
+        <meta charset=utf-8>
         <title>Jason Tu</title>
         <link href="https://fonts.googleapis.com/css?family=Oxygen:300" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
@@ -9,8 +10,10 @@
 
     <body>
         <div class="main-div">
-            <a href="experiments.html">
-                ◅ Web Experiments
+            <a href="home.html">
+                ◅ Home
+            </a> / <a href="experiments.html">
+                Web Experiments
             </a>
             <h1>
                 Coming Soon
