--- a/public_html/about.html
+++ b/public_html/about.html
@@ -26,10 +26,10 @@
                 My name is Jason Tu, I am a Computer Science graduate of Rochester Institute of Technology. I am currently seeking my first full time software engineering/development role.
 
             <br><br>
-I consider myself strongest in object oriented programming, particularly in Java. I also have experience in web development, Python, and some C#. Of course, these skills are transferable and I can quickly pick up new languages and technologies.
+I consider myself strongest in object oriented programming, particularly in Java. I also have experience in web development (both front and back end), Python, SQL and some C#. Of course, these skills are transferable and I can quickly pick up new languages and technologies.
 
             <br><br>
-Throughout earning my degree, I completed three co-ops at different companies. At Bose, I was testing SoundTouch, a mobile app used to control Bose sound systems. At Moog, I got my first exposure to web development. I developed a web app that is used to track parts and the engineers who are designing them. At Lenel, I did a combination of QA and software development. Some of the applications I developed are used to support the testing framework for their main product, OnGuard.
+Throughout earning my degree, I completed three co-ops at different companies. At Bose, I was testing SoundTouch, a mobile app used to control Bose sound systems. At Moog, I got my first exposure to web development. I developed a web app that is used to track parts and the engineers who are designing them. At Lenel, I did a combination of QA and software development. Some of the applications I developed are used to support the testing framework for their main product, OnGuard. You will find more technical details on my resume.
 
             <br><br>
 In my free time, I am a weightlifting athlete and coach. When I'm not training or coaching, I enjoy hiking, reading, and good movies.
